used Anthony's to create slides
from Anthony's commit earlier this week.  Used to create an html of slides.

--- a/project_merge_data.ipynb
+++ b/project_merge_data.ipynb
@@ -1,10 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "15c91e7a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# At The End Of Happy Hour!\n",
+    "Project 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b928b52d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Team members\n",
+    "___\n",
+    "\n",
+    "* Katrina Fletcher\n",
+    "* Nancy Campos\n",
+    "* Scott Dutton\n",
+    "* Anthony Garcia\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e9872ff3",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -18,10 +53,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fa822204",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Question to answer\n",
+    "___\n",
+    "\n",
+    "* Which county drinks the most/least?\n",
+    "* What are they drinking specifically?\n",
+    "* What country is the happiest?\n",
+    "* Based on different categories of alcohol, which country is the happiest?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f382fb79",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#### Potential Data Sets\n",
+    "___\n",
+    "\n",
+    "  * [Happines and Alcohol Consumption](https://www.kaggle.com/datasets/marcospessotto/happiness-and-alcohol-consumption)\n",
+    "\n",
+    "  * [Ranking of the alcohol consumption per capita by country 2020](https://www.statista.com/forecasts/1148811/per-capita-alcohol-consumption-by-country)\n",
+    "\n",
+    "  * [Total Alcohol Consumption](https://www.kaggle.com/datasets/prondeau/total-alcohol-consumption)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "eb39c269",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "happiness_path = os.path.join('/Users/anthonygarcia/Desktop/Project-Happy-Hour-1/HappinessAlcoholConsumption.csv')\n",
@@ -32,7 +110,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "0e72c849",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "happiness_study_df = pd.read_csv(happiness_path)\n",
@@ -43,7 +125,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "72250a93",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "income_study_df.rename(columns = {'Economy' : 'Country'}, inplace = True)"
@@ -53,7 +139,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "cfc58b6f",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -298,7 +388,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "725ef8d5",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -659,7 +753,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "bb17ce86",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -672,7 +770,11 @@
    "cell_type": "code",
    "execution_count": 163,
    "id": "dd27d48f",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -805,10 +907,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c1eae829",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Things to consider\n",
+    "___\n",
+    "\n",
+    "* Weather - warm/cold climates\n",
+    "* Economic data per capita income\n",
+    "  * Is there a relationship?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baca1f9a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 161,
    "id": "29085908",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -951,7 +1082,11 @@
    "cell_type": "code",
    "execution_count": 108,
    "id": "5d23fedb",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -992,7 +1127,11 @@
    "cell_type": "code",
    "execution_count": 110,
    "id": "61c12b32",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1035,7 +1174,11 @@
    "cell_type": "code",
    "execution_count": 142,
    "id": "6d0bdfcb",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1075,7 +1218,11 @@
    "cell_type": "code",
    "execution_count": 158,
    "id": "7bbcfaf1",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1112,7 +1259,11 @@
    "cell_type": "code",
    "execution_count": 136,
    "id": "dfd679cf",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1149,7 +1300,11 @@
    "cell_type": "code",
    "execution_count": 137,
    "id": "c0fe4f09",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1200,6 +1355,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
